# lk-qtquick-scaffold

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  README.md  _typing.py  launcher.py  pyhooks.py  pyproject.toml  requirements.txt
code_examples/animations/eg01_viscous_indicator_anim/: main.py  view.qml
debugger/: HotReloader.qml  __init__.py  debugger.py  layout_check.js  main.py
docs/: (suggestion)-add-qml-keywords-in-pycharm-file-types.zh.md  PyComm 使用示例.md  Python 获得 QML 对象并修改它的 border, anchors 属性.md  QML 与 Python 交互方案.md  QML 与 Python 交互的局限性与解决方法.md  QML 组件库形式探讨.md  scope-engine.zh.md  theme-proposal.zh.md  声明事项.md  如何引用脚手架项目.md  缺点和局限性.md
docs/old-articles-to-be-updated/: 如何引用脚手架项目.md
examples/: README.md
examples/advanced/: ImageTransitionScenes.qml
examples/animations_(deleted)/eg02_image_expand_to_full_window/: ImageTransitionScenes.qml
examples/console_print/: view.qml
examples/hello_world/: main.py  view.qml
examples/hot_reloader/: main.py  view.qml
examples/lk_widgets/: progress_demo.qml  view.qml
examples/signal_slot/: typehint_test.py
hot-reloader/hot_reloader/: __init__.py  main.py
lk_qtquick_scaffold/: __init__.py  __main__.py  _typing.py  application.py  delegator.py  launch.py  launcher.py  layout_engine.py  layout_helper.py  path_model.py  pycomm.py  pycomm_old.py  pyhandler.py  pyhooks.py  typehint.py
lk_qtquick_scaffold/debugger/: HotReloader.qml  layout_check.js  logger.js  logger.py  main.py
lk_qtquick_scaffold/debugger/LKDebugger/: HotReloader.qml  logger.js  qmldir
lk_qtquick_scaffold/experimental_features/: acrylic_window.py
lk_qtquick_scaffold/hot_loader/: hot_loader.py  view.qml
lk_qtquick_scaffold/js/: layout-helper.js
lk_qtquick_scaffold/pyside/: __init__.py  application.py  pyside.py  register.py  signal_slot.py
lk_qtquick_scaffold/qml/: Main.qml
lk_qtquick_scaffold/qml/LightClean/: LCRow.qml  (+23 more)
lk_qtquick_scaffold/qml_helper/: layout_helper.js  layout_helper.py
lk_qtquick_scaffold/qmlside/: __ext__.py  __init__.py  assets.py  data_model.py  js_evaluator.py  js_evaluator_controls.qml  layout_helper.py  model.py  qjs_engine.py  qlogger.py  resource_manager.py  type_adapter.py
lk_qtquick_scaffold/qt_core/: __init__.py  qobject.py  signal_slot.py
lk_qtquick_scaffold/scaffold/: LKQtQuickScaffold.qmlproject  README.md
lk_qtquick_scaffold/style/: base.py  color.py  font.py  motion.py  size.py  style.py
lk_qtquick_scaffold/themes/: readme.md
qml/: Main.qml
qml/Demo/: LightCleanDemo.qml
qml/LightClean/: LCButton.qml  LCEditField.qml  LCPopup.qml  LCText.qml
tests/calc_content_width/: view.qml
tests/qml/: TestMain.qml
to_be_deleted/: pycomm.py
to_be_deleted/debugger/: main.py
to_be_deleted/qml_helper/: layout_helper.js
tools/: find_usages.py  update_qmldir.py
unittests/test_pylayout/: main.py  view.qml
utils/: find_usages.py
(+221 files in other folders)
